--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^8.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "multer": "^1.4.2"
   }
