--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "mocha": "^6.2.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chai-http": "^4.3.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.4"
   }
 }
