--- a/smarthome/package.json
+++ b/smarthome/package.json
@@ -10,7 +10,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "awesome-notifications": "^3.0.3",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "lodash.debounce": "^4.0.8",
     "vue": "^2.6.10",
     "vue-awesome-notifications": "^3.0.3",
     "vue-router": "^3.0.3",
