--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^8.1.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^3.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "google-auth-library": "^5.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "multer": "^1.4.2"
