--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google-cloud/storage": "^3.5.0",
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
+        "gcs-upload": "^1.1.2",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.7.4"
+        "mongoose": "^5.7.4",
+        "morgan": "^1.9.1"
     },
     "devDependencies": {
         "chai": "^4.2.0",
