--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "NODE_ENV=test mocha --exit",
     "dev": "NODE_ENV=development nodemon app.js",
     "sync": "NODE_ENV=development nodemon app.js 172.16.11.14 3000",
+    "home": "NODE_ENV=development nodemon app.js 192.168.0.100 3000",
     "start": "node app.js"
   },
   "keywords": [],
