--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "buefy": "^0.8.5",
+    "bulma-extensions": "^6.2.7",
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
