--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.5",
     "bulma-extensions": "^6.2.7",
     "core-js": "^3.1.2",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
