--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "gcs-upload": "^1.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
