--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
     "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
     "sweetalert2": "^8.18.3",
+    "vodal": "^2.4.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-js-modal": "^1.3.31",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
