--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "md5": "^2.2.1",
     "vue": "^2.6.10",
     "vue-awesome-notifications": "^3.0.3",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
