--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/userTest.js"
+    "test": "NODE_ENV=test mocha --exit",
+    "dev": "NODE_ENV=development nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^4.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-google-storage": "^1.3.0"
   },
   "devDependencies": {
     "chai-http": "^4.3.0",
