--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vue-accordion": "^1.0.0",
     "vue-router": "^3.0.6",
     "vue-slideout": "^1.8.0",
+    "vue-sweetalert2": "^2.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
