--- a/server/package.json
+++ b/server/package.json
@@ -28,12 +28,14 @@
     "mocha": "^6.2.1"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.0.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   }
 }
