--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGOOSE_URL='mongodb://postgres:postgres@mycluster-shard-00-00-icpdp.gcp.mongodb.net:27017,mycluster-shard-00-01-icpdp.gcp.mongodb.net:27017,mycluster-shard-00-02-icpdp.gcp.mongodb.net:27017/mini-wp?ssl=true&replicaSet=MyCluster-shard-0&authSource=admin&retryWrites=true&w=majority'
+MONGOOSE_URL='mongodb://postgres:postgres@mycluster-shard-00-00-icpdp.gcp.mongodb.net:27017,mycluster-shard-00-01-icpdp.gcp.mongodb.net:27017,mycluster-shard-00-02-icpdp.gcp.mongodb.net:27017/ecommerce?ssl=true&replicaSet=MyCluster-shard-0&authSource=admin&retryWrites=true&w=majority'
 SECRET='rahasia'
 CLIENT_ID='1064661640914-0iu1ibccthdktforjllskc6lasl36o91.apps.googleusercontent.com'
 GCS_BUCKET="ecommerce-picture"
