update after deploy

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-CONNECTION-="mongodb://localhost:27017/e-commerce"
-CONNECTION="mongodb+srv://sigitariprasetyo:sap258456@sigitari111-10iew.gcp.mongodb.net/e-commerce?retryWrites=true&w=majority"
+CONNECTION="mongodb://localhost:27017/e-commerce"
+CONNECTION-="mongodb+srv://sigitariprasetyo:sap258456@sigitari111-10iew.gcp.mongodb.net/e-commerce?retryWrites=true&w=majority"
 PORT=3000
 SALT="ecommerce"
 
