--- a/client/package.json
+++ b/client/package.json
@@ -4,30 +4,21 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
-    "sweetalert2": "^8.18.3",
-    "vodal": "^2.4.0",
+    "sweetalert2": "^8.18.6",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-eslint": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "prettier": "^1.18.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
