--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "sweetalert2": "^8.18.3",
     "vue": "^2.6.10",
     "vue-awesome-notifications": "^3.0.3",
-    "vue-router": "^3.0.3"
+    "vue-google-oauth2": "^1.4.0",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
