--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,15 @@
     "cors": "^2.8.5",
     "debug": "~2.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^5.5.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.4",
     "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "nodemailer": "^6.3.1",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
